fix video overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -272,7 +272,7 @@ html {
         transform: translate(50%, -50%);
         min-width: 100vh;
         min-height: 100%;
-        width: auto;
+        width: 100%;
         height: auto;
         z-index: -100;
         background-size: cover;
